--- a/LittleBlackBook/Base.lproj/Main.storyboard
+++ b/LittleBlackBook/Base.lproj/Main.storyboard
@@ -4,5 +4,49 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Home-->
+        <scene sceneID="bKY-9A-u0E">
+            <objects>
+                <viewController id="0Dm-9y-8qh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a3X-iE-Q9u"/>
+                        <viewControllerLayoutGuide type="bottom" id="M3p-wv-rXy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kbX-dK-Nfm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="ic_home_white" id="pf8-Js-hxt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l7b-o4-0Ta" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="931.5" y="151.5"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="5tN-5U-3vN">
+            <objects>
+                <tabBarController id="YgI-SR-gAx" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" itemPositioning="centered" id="VGc-um-dFA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.027450980392156862" green="0.63529411764705879" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="0Dm-9y-8qh" kind="relationship" relationship="viewControllers" id="0CE-mg-kkx"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ScG-8d-kt0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-138" y="152"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="ic_home_white" width="24" height="24"/>
+    </resources>
 </document>
