--- a/LittleBlackBook/Base.lproj/Main.storyboard
+++ b/LittleBlackBook/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Liked-->
@@ -78,9 +80,39 @@
                     <view key="view" contentMode="scaleToFill" id="kbX-dK-Nfm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pQ-d3-X0C" userLabel="PhotoViewPlaceHolder">
+                                <rect key="frame" x="26" y="172" width="323" height="323"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="9pQ-d3-X0C" secondAttribute="height" multiplier="1:1" id="5g3-9I-O0L"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qrq-VH-bG6">
+                                <rect key="frame" x="146" y="318.5" width="82" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="82" id="B6K-8Z-T1y"/>
+                                    <constraint firstAttribute="height" constant="30" id="s85-Ko-AQV"/>
+                                </constraints>
+                                <state key="normal" title="Load More"/>
+                                <connections>
+                                    <action selector="loadMore:" destination="0Dm-9y-8qh" eventType="touchUpInside" id="b73-la-ZwE"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Qrq-VH-bG6" firstAttribute="centerX" secondItem="kbX-dK-Nfm" secondAttribute="centerX" id="1KF-Yd-DKH"/>
+                            <constraint firstItem="9pQ-d3-X0C" firstAttribute="leading" secondItem="kbX-dK-Nfm" secondAttribute="leadingMargin" constant="10" id="63D-lr-miZ"/>
+                            <constraint firstItem="Qrq-VH-bG6" firstAttribute="centerY" secondItem="kbX-dK-Nfm" secondAttribute="centerY" id="THN-eg-oOx"/>
+                            <constraint firstItem="9pQ-d3-X0C" firstAttribute="centerY" secondItem="kbX-dK-Nfm" secondAttribute="centerY" id="bbC-e7-I3W"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9pQ-d3-X0C" secondAttribute="trailing" constant="10" id="dys-LA-egW"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="ic_home_white" id="pf8-Js-hxt"/>
+                    <connections>
+                        <outlet property="photoPlaceHolder" destination="9pQ-d3-X0C" id="F4F-7g-zMi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l7b-o4-0Ta" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -187,7 +219,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="CrE-AI-uJi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mp0-qd-ovc">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Mp0-qd-ovc">
                             <size key="itemSize" width="170" height="170"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
